typescript/checker/tests/conformance/expressions/typeGuards/typeGuardNarrowsToLiteralTypeUnion.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            173,
        ),
        hi: BytePos(
            178,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardNarrowsToLiteralTypeUnion.ts:4:5
  |
4 | let value: string;
  |     ^^^^^

